--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.38.1",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "react-use": "^17.6.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
