--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "react-use": "^17.6.0",
+    "react-use-size": "^5.0.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
